--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -5,5 +5,6 @@
 
     <ol (click)="toggle('cartOne')"> Cart One </ol>
     <ol (click)="toggle('cartTwo')"> Cart Two</ol>
+    <ol (click)="toggle('productlist')"> Product List</ol>
   </li>
 </div>
